appId: host.exp.exponent
---
#- launchApp
# ⚠️ Assure-toi que ton app Expo est déjà ouverte dans l’émulateur avant d’exécuter ce test.
- tapOn: "usernameInput"
- inputText: "Axel"
- tapOn: "passwordInput"
- inputText: "Axel88120!"
- tapOn: "submitButton"
- assertVisible: "Nom d'utilisateur : axel"
